1. Change InterviewerDTO. 2. add bootstrap to Views.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,17 @@ spring.mvc.view.suffix=.jsp
 # EMBEDDED SERVER CONFIGURATION
 
 # MONGODB
-spring.data.mongodb.host=ds015929.mlab.com
-spring.data.mongodb.port=15929
-spring.data.mongodb.database=heroku_z7ps4m2q
-spring.data.mongodb.username=user
-spring.data.mongodb.password=password
+#spring.data.mongodb.host=ds015929.mlab.com
+#spring.data.mongodb.port=15929
+#spring.data.mongodb.database=heroku_z7ps4m2q
+#spring.data.mongodb.username=user
+#spring.data.mongodb.password=password
+#spring.data.mongodb.repositories.enabled=true
+
+# MONGODB
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=interview
+spring.data.mongodb.username=NSS
+spring.data.mongodb.password=nss22
 spring.data.mongodb.repositories.enabled=true
